# SpacetimeDB-Cpp

./: CMakeLists.txt  README.md  ROADMAP.md
examples/: CMakeLists.txt  quickstart-chat.cpp
include/: Client.hpp  Config.hpp  SpacetimeDB.hpp
include/Database/: DatabaseClient.hpp  DatabaseModels.hpp
include/Identity/: IdentityClient.hpp  IdentityModels.hpp
include/SpacetimeDB/: Client.hpp  Config.hpp  SpacetimeDB.hpp  Types.h  Version.hpp
include/SpacetimeDB/Database/: DatabaseClient.hpp  DatabaseModels.hpp
include/SpacetimeDB/Http/: Error.hpp  HttpClient.hpp  HttpClientCpr.hpp  Json.hpp
include/SpacetimeDB/Http/Endpoints/Database/: DatabaseClient.hpp  DatabaseModels.hpp
include/SpacetimeDB/Http/Endpoints/Identity/: IdentityClient.hpp  IdentityModels.hpp
include/SpacetimeDB/Http/WebSocket/: WebSocketClient.hpp
include/SpacetimeDB/Identity/: IdentityClient.hpp  IdentityModels.hpp
include/SpacetimeDB/Utils/: Error.hpp  HttpClient.hpp  Json.hpp
include/SpacetimeDB/WebSocket/: WebSocketClient.hpp
include/Utils/: Error.hpp  HttpClient.hpp  Json.hpp
src/: Client.cpp
src/Database/: DatabaseClient.cpp
src/Http/: AsioBeastWrapper.inl  HttpClient.cpp  HttpClientAsioBeast.cpp  HttpClientCpr.cpp  HttpClient_libcpr.cpp
src/Http/Endpoints/Database/: DatabaseClient.cpp
src/Http/Endpoints/Identity/: IdentityClient.cpp
src/Http/WebSocket/: WebSocketClient.cpp
src/Identity/: IdentityClient.cpp
src/Utils/: HttpClient.cpp
src/WebSocket/: WebSocketClient.cpp
tests/: CMakeLists.txt  DatabaseTests.cpp  IdentityTests.cpp
